# fom-projektarbeit-ss26

./: .gitignore  README.md  pyproject.toml
agents/dqn_selfplay_2026_05_31/: algorithm_state.pkl  class_and_ctor_args.pkl  parameters.json
agents/dqn_selfplay_2026_05_31/env_runner/: class_and_ctor_args.pkl
agents/dqn_selfplay_2026_05_31/env_runner/env_to_module_connector/: class_and_ctor_args.pkl
agents/dqn_selfplay_2026_05_31/env_runner/module_to_env_connector/: class_and_ctor_args.pkl
agents/dqn_selfplay_2026_05_31/eval_env_runner/: class_and_ctor_args.pkl  state.pkl
agents/dqn_selfplay_2026_05_31/eval_env_runner/env_to_module_connector/: class_and_ctor_args.pkl
agents/dqn_selfplay_2026_05_31/eval_env_runner/module_to_env_connector/: class_and_ctor_args.pkl
agents/dqn_selfplay_2026_05_31/learner_group/: class_and_ctor_args.pkl
agents/dqn_selfplay_2026_05_31/learner_group/learner/: class_and_ctor_args.pkl  state.pkl
agents/dqn_selfplay_2026_05_31/learner_group/learner/rl_module/: class_and_ctor_args.pkl
agents/dqn_selfplay_2026_05_31/learner_group/learner/rl_module/dqn/: class_and_ctor_args.pkl  module_state.pkl
agents/v0/: class_and_ctor_args.pkl  module_state.pkl  parameters.json
durak-bot/: Control_Flow.drawio  README.md  pyproject.toml
durak-bot/src/: action.py  adapter.py  agent_utils.py  bot_lowest_card.py  dqn_agent.py  gamestate.py  gamestate_test.py  human_terminal_player.py  human_terminal_player_test.py  interfaces.py  main.py  terminal_output.py  terminal_output_test.py  trump_fish_agent.py  two_player_game.py  two_player_game_test.py
(+11 files in other folders)
