[project]
name = "durak-dqn"
version = "0.1.0"
description = "Durak bot trained via Deep-Q-Networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cli",
    "durak",
    "dqn",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cli = { workspace = true }
durak = { workspace = true }
dqn = { workspace = true }
