[project]
name = "durak-bot"
version = "0.1.0"
description = "Durak bot trained via Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=2.4.6",
    "pettingzoo>=1.26.1",
    "ray[rllib]>=2.55.1",
    "torch>=2.12.0",
    "typer>=0.24.1",
]
